fixed some z-index stuff

--- a/index.css
+++ b/index.css
@@ -1,11 +1,5 @@
 html{font-size:100%;} 
 
-@media (max-width: 800px) {
-    .Navbar {
-        visibility: hidden;
-    }
-}
-
 body {
     text-align: center;
     background-image: linear-gradient(rgb(190,210,230), rgb(150, 170, 220), rgb(67,95,140));
@@ -321,7 +315,7 @@ h3 {
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 3px;
-    z-index: 600;
+    z-index: 50;
 }
 
 .SidebarToggle:hover {
@@ -392,7 +386,7 @@ h3 {
     width: 100%;
     height: 100%;
     position: fixed;
-    z-index: 100;
+    z-index: 40;
     left: 0;
     top: 0;
     background-color: rgba(0,0,0,0.5);
